Empty cart condition fix

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,5 @@
 <% if enhanced_cart == [] %>
-<h3>Your cart is empty!</h3>
+<h3>Your cart is empty</h3>
 <%= link_to 'Return Home', :root %>
 
 <% else %>
