--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,4 +20,10 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+  <% if product.quantity.to_i == 0 %>
+   <aside class="sold-out">
+    <h6>SOLD OUT!</h6>
+   </aside>
+  <% end %>
+
 </article>
