Add totals to dashboard

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h2>Admin Dashboard</h2>
+<h3>Website Stats</h3>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Count</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Products</th>
+      <td><%= @products %></td>
+    </tr>
+    <tr>
+      <th scope="row">Categories</th>
+      <td><%= @categories %></td>
+    </tr>
+  </tbody>
+</table>
+
+<%= link_to "Click to see all products", "/admin/products" %>
